--- a/src/client/PartsClient/PartsClient/Pages/AddPartPage.xaml
+++ b/src/client/PartsClient/PartsClient/Pages/AddPartPage.xaml
@@ -1,22 +1,24 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="PartsClient.Pages.AddPartPage">
+             x:Class="PartsClient.Pages.AddPartPage"
+             Title="Edit Part">
 
-    <Grid RowDefinitions="*,Auto" ColumnDefinitions="*,*" ColumnSpacing="5">
-        <TableView Intent="Data" Grid.Row="0" Grid.ColumnSpan="2">
+    <Grid RowDefinitions="*,Auto" ColumnDefinitions="*,*,*" ColumnSpacing="5">
+        <TableView Intent="Data" Grid.Row="0" Grid.ColumnSpan="3">
             <TableRoot>
                 <TableSection Title="Part Info">
-                    <EntryCell Label="Part ID" Text="{Binding PartID}" x:Name="PartIDField" />
-                    <EntryCell Label="Part Name" Text="{Binding PartName}" x:Name="PartNameField"/>
-                    <EntryCell Label="Part Type" Text="{Binding PartType}" x:Name="PartTypeField"/>
-                    <EntryCell Label="Supplier" Text="{Binding SupplierString}" x:Name="PartSupplierField"/>
+                    <EntryCell Label="Part ID" Text="{Binding PartID}" IsEnabled="False" />
+                    <EntryCell Label="Part Name" Text="{Binding PartName}" />
+                    <EntryCell Label="Part Type" Text="{Binding PartType}" />
+                    <EntryCell Label="Supplier" Text="{Binding Suppliers}" />
                 </TableSection>
             </TableRoot>
         </TableView>
 
-        <Button Text="Add" Grid.Row="1" Grid.Column="0" Clicked="OnAddPart"/>
-        <Button Text="Clear" Grid.Row="1" Grid.Column="1" Clicked="OnClearPart"/>
+        <Button Text="Save" Grid.Row="1" Grid.Column="0" Command="{Binding SaveCommand}" Margin="20,0"/>
+        <Button Text="Delete" Grid.Row="1" Grid.Column="1" Command="{Binding DeleteCommand}"/>
+        <Button Text="Cancel" Grid.Row="1" Grid.Column="2" Command="{Binding DoneEditingCommand}" Margin="20,0"/>
 
     </Grid>
 
