--- a/src/client/PartsClient/PartsClient/Pages/PartsPage.xaml
+++ b/src/client/PartsClient/PartsClient/Pages/PartsPage.xaml
@@ -3,69 +3,29 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="PartsClient.Pages.PartsPage">
 
-    <CollectionView  Margin="30,20,30,30" x:Name="PartsView" ItemsSource="{Binding Parts}" VerticalScrollBarVisibility="Always">
-        <CollectionView.ItemsLayout>
-            <LinearItemsLayout Orientation="Vertical" ItemSpacing="20" />
-        </CollectionView.ItemsLayout>
-        <CollectionView.ItemTemplate>
-            <DataTemplate>
-                <SwipeView>
-                    <SwipeView.LeftItems>
-                        <SwipeItems>
-                            <SwipeItem Text="Save Changes" 
-                                       BackgroundColor="PaleGreen"
-                                       Invoked="OnSaveChanges"
-                                       CommandParameter="{Binding}"/>
-                            <SwipeItem Text="Delete" 
-                                       BackgroundColor="PaleVioletRed"
-                                       Invoked="OnDeletePart"
-                                       CommandParameter="{Binding}"/>
-                        </SwipeItems>
-                    </SwipeView.LeftItems>
-                    <Grid RowDefinitions="*,*,*,*,*" ColumnDefinitions="80,*" BackgroundColor="Azure" Margin="5">
-                        <Label Text="Part ID:" 
-                           TextColor="Black"
-                           Grid.Row="0"
-                           Grid.Column="0"/>
-                        <Editor Text="{Binding PartID, Mode=TwoWay}"
-                            TextColor="Black"
-                            Grid.Row="0"
-                            Grid.Column="1"/>
-                        <Label Text="Part Name:" 
-                           TextColor="Black"
-                           Grid.Row="1"
-                           Grid.Column="0"/>
-                        <Entry Text="{Binding PartName, Mode=TwoWay}" 
-                            TextColor="Black"
-                            Grid.Row="1"
-                            Grid.Column="1"/>
-                        <Label Text="Part Type:"
-                           TextColor="Black"
-                           Grid.Row="2"
-                           Grid.Column="0"/>
-                        <Entry Text="{Binding PartType, Mode=TwoWay}" 
-                            TextColor="Black"
-                            Grid.Row="2"
-                            Grid.Column="1"/>
-                        <Label Text="Available:" 
-                           TextColor="Black"
-                           Grid.Row="3"
-                           Grid.Column="0"/>
-                        <Entry Text="{Binding PartAvailableDate, Mode=TwoWay}" 
-                            TextColor="Black"
-                            Grid.Row="3"
-                            Grid.Column="1"/>
-                        <Label Text="Suppliers:"
-                           TextColor="Black"
-                           Grid.Row="4"
-                           Grid.Column="0"/>
-                        <Label Text="{Binding SupplierString}" 
-                           TextColor="Black"
-                           Grid.Row="4"
-                           Grid.Column="1"/>
-                    </Grid>
-                </SwipeView>
-            </DataTemplate>
-        </CollectionView.ItemTemplate>
-    </CollectionView>
+    <VerticalStackLayout>
+        <Button Text="Add New Part" Margin="20, 10, 20, 10" Command="{Binding AddNewPartCommand}" />
+        <RefreshView IsRefreshing="{Binding IsRefreshing}" x:Name="refreshView" 
+                     Command="{Binding LoadDataCommand}">
+            <CollectionView  Margin="30,20,30,30"
+                             ItemsSource="{Binding Parts}"                             
+                             SelectedItem="{Binding SelectedPart, Mode=TwoWay}"
+                             SelectionChangedCommand="{Binding PartSelectedCommand}"
+                             SelectionMode="Single">
+                <CollectionView.ItemsLayout>
+                    <LinearItemsLayout Orientation="Vertical" ItemSpacing="20" />
+                </CollectionView.ItemsLayout>
+                <CollectionView.ItemTemplate>
+                    <DataTemplate>
+                        <VerticalStackLayout Padding="15,10" Margin="10,5,10,5">
+                            <Label Text="{Binding PartID, StringFormat='ID: {0}'}" FontSize="Title" Margin="0,0,0,20"/>
+                            <Label Text="{Binding PartName, StringFormat='Part Name: {0}'}"/>
+                            <Label Text="{Binding PartType, StringFormat='Part Type: {0}'}"/>
+                        </VerticalStackLayout>
+                    </DataTemplate>
+                </CollectionView.ItemTemplate>
+            </CollectionView>
+        </RefreshView>
+    </VerticalStackLayout>
+
 </ContentPage>
